.metadata/.plugins/org.eclipse.cdt.ui/BallancingRobot_V1.build.log
21:45:15 **** Incremental Build of configuration Debug for project BallancingRobot_V1 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:166:23: error: expected expression before ')' token
  166 |   PID_Init(&PidAngle, );
      |                       ^
../Core/Src/main.c:166:3: error: too few arguments to function 'PID_Init'
  166 |   PID_Init(&PidAngle, );
      |   ^~~~~~~~
In file included from ../Core/Src/main.c:29:
../Core/Inc/PID.h:31:6: note: declared here
   31 | void PID_Init(PID_t *Pid, float P, float I, float D, float SampleTime, float MaxValue, float MinValue);
      |      ^~~~~~~~
make: *** [Core/Src/subdir.mk:55: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

21:45:16 Build Failed. 3 errors, 0 warnings. (took 963ms)

